# zeldarose

./: .gitignore  .markdownlint  .markdownlint.json  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENCE.md  README.md  data.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  tox.toml  train_tokenizer.py  train_transformer.py  trainer.py
.github/: dependabot.yaml
.github/workflows/: ci.yml
docs/: _config.yml  _toc.yml  get_started.md  index.md  requirements.txt  training_configurations.md  transformer.md  zeldarose.bib
docs/tasks/: mbart.md  mlm.md  ntp.md  rtd.md
examples/: mbart-config.toml  mlm-config.toml  mlm-fine-tuning-config.toml  mlm-task-config.toml  ntp-config.toml  rtd-config.toml
scripts/: evaluate_sacrebleu.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: mbart-config.toml  mlm-config.toml  ntp-config.toml  raw.txt  rtd-config.toml  translation.jsonl
tests/fixtures/roberta-minuscule/: config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
zeldarose/: __init__.py  common.py  create_cache.py  data.py  main.py  mlm.py  rtd.py  train_tokenizer.py  train_transformer.py  trainer.py  utils.py
zeldarose/datasets/: mbart.py  seq2seq.py  transform.py
zeldarose/tasks/: asr.py  mbart.py  mlm.py  ntp.py  rtd.py
