[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeldarose"
version = "0.6.0"
description = "Train transformer-based models"
license = {text = "MIT"}
authors = [{name = "Loïc Grobol", email = "loic.grobol@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
]
keywords = [
    "nlp",
    "transformers",
    "language-model",
]
requires-python = ">=3.8"
dependencies = [
    "click >= 8.0.4, < 9.0.0",
    "datasets >= 2.2, < 2.5",
    "filelock",
    "loguru",
    "pydantic",
    "pytorch-lightning >= 1.7.1, < 1.8.0",
    "rich",
    "sacremoses",
    "torchmetrics >= 0.9, < 1.0",
    "tokenizers ~= 0.10",
    "toml",
    "torch >= 1.9.0, != 1.10.0, < 1.14.0",
    "transformers >= 4.19.0, < 5.0.0, != 4.23.0, != 4.23.1",
]


[project.optional-dependencies]
lint = [
    "black",
    "flake8-bugbear",
    "flake8-pyproject",
    "flake8-pytest-style",
    "mypy",
]
tests = [
    "pytest",
    "pytest-console-scripts",
    "pytest-lazy-fixture",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["zeldarose"]

[project.scripts]
zeldarose-tokenizer = "zeldarose.train_tokenizer:main"
zeldarose-transformer = "zeldarose.train_transformer:main"

[project.urls]
"Bug Tracker" = "https://github.com/loicgrobol/zeldarose/issues"
"Changes" = "https://github.com/loicgrobol/zeldarose/blob/main/CHANGELOG.md"
"Documentation" = "https://github.com/loicgrobol/zeldarose/blob/main/README.md"
"Source Code" = "https://github.com/loicgrobol/zeldarose"

[tool.flake8]
max-line-length = 100
ignore = ["E203", "E266", "E501", "W503"]

[tool.mypy]
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.bandit]
assert_used.skips = ["tests/test_*.py"]