[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeldarose"
version = "0.7.3"
description = "Train transformer-based models"
license = { text = "MIT" }
authors = [{ name = "Loïc Grobol", email = "loic.grobol@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
]
keywords = ["nlp", "transformers", "language-model"]
requires-python = ">=3.8"
dependencies = [
    "click >= 8.0.4, < 9.0.0",
    "datasets >= 2.2, < 2.15",
    "filelock",
    "jsonlines",
    "loguru",
    "pydantic",
    "pytorch-lightning >= 1.8.0, < 2.1.0",
    "rich",
    "sacrebleu",
    "sacremoses",
    "sentencepiece",
    "tensorboardx",
    "torchmetrics >= 0.9, < 2.0",
    "tokenizers >= 0.10, < 0.14",
    "tomli",
    "torch >= 1.12.0, < 2.1.0",
    "transformers >= 4.19.0, < 5.0.0, != 4.23.0, != 4.23.1",
]


[project.optional-dependencies]
lint = [
    "black",
    "mypy",
    "ruff",
]
tests = ["pytest", "pytest-console-scripts", "pytest-lazy-fixture"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["zeldarose", "zeldarose.tasks", "zeldarose.datasets"]

[project.scripts]
zeldarose = "zeldarose.main:cli"
zeldarose-tokenizer = "zeldarose.train_tokenizer:main"
zeldarose-transformer = "zeldarose.train_transformer:main"

[project.urls]
"Bug Tracker" = "https://github.com/loicgrobol/zeldarose/issues"
"Changes" = "https://github.com/loicgrobol/zeldarose/blob/main/CHANGELOG.md"
"Documentation" = "https://zeldarose.readthedocs.io"
"Source Code" = "https://github.com/loicgrobol/zeldarose"

[tool.ruff]
line-length = 100
select = ["A", "B", "C90", "E", "F", "N", "NPY", "PT", "PTH", "PYI", "S", "W"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant
]


[tool.mypy]
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
