[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeldarose"
version = "0.12.0"
description = "Train transformer-based models"
license = { text = "MIT" }
authors = [{ name = "Loïc Grobol", email = "loic.grobol@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]
keywords = ["nlp", "transformers", "language-model"]
requires-python = ">=3.8"
dependencies = [
    "click >= 8.0.4, < 9.0",
    "datasets >= 3.0, < 3.3",
    "filelock",
    "jsonlines",
    "lightning >= 2.0, < 2.6",
    "loguru",
    "pydantic",
    "pytorch-lightning >= 2.0, < 2.6",
    "rich < 14.1",  # Because of <https://github.com/Lightning-AI/pytorch-lightning/issues/21037>, probably fixed in lightning next(2.5.2)
    "sacrebleu",
    "sacremoses",
    "system_info",
    "tensorboardx",
    "torchmetrics >= 1.0, < 2.0",
    "tokenizers >= 0.10, < 0.22",
    "tomli",
    "torch >= 2.0, < 2.7",
    "transformers >= 4.19, < 5.0, != 4.23, != 4.41, != 4.42, != 4.43",
]

[project.optional-dependencies]
lint = ["mypy", "ruff"]
tests = [
    "pytest",
    "pytest-console-scripts",
    "pytest-github-actions-annotate-failures",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["zeldarose", "zeldarose.tasks", "zeldarose.datasets"]

[project.scripts]
zeldarose = "zeldarose.main:cli"

[project.urls]
"Bug Tracker" = "https://github.com/loicgrobol/zeldarose/issues"
"Changes" = "https://github.com/loicgrobol/zeldarose/blob/main/CHANGELOG.md"
"Documentation" = "https://zeldarose.readthedocs.io"
"Source Code" = "https://github.com/loicgrobol/zeldarose"

[tool.ruff]
line-length = 100
lint.select = [
    "A",
    "B",
    "C90",
    "E",
    "F",
    "N",
    "NPY",
    "PT",
    "PTH",
    "PYI",
    "S",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant
]

[tool.mypy]
check_untyped_defs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
script_launch_mode = "subprocess"
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
