[metadata]
name = zeldarose
version = 0.3.1dev0
description = Train transfomer-based models
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
keywords =
    nlp
    transformers
    language-model


[options]
packages = find:
include_package_data=True
python_requires = >=3.8
install_requires =
    click
    click_pathlib
    datasets
    filelock
    loguru
    pydantic
    pytorch-lightning >= 1.3.0, < 1.4.0
    torch ~= 1.8
    tqdm
    tokenizers ~= 0.10
    toml
    transformers >= 4.0.0, < 5.0.0

[options.entry_points]
console_scripts =
    zeldarose-tokenizer = zeldarose.train_tokenizer:main
    zeldarose-transformer = zeldarose.train_transformer:main

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
allow_redefinition = True
warn_unreachable = True
plugins = pydantic.mypy
